--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
+  "name": "christinalu3799.github.io",
+  "version": "1.0.0",
+  "description": "This repo contains all the source code and documentation for my online portfolio.",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/christinalu3799/christinalu3799.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/christinalu3799/christinalu3799.github.io/issues"
+  },
+  "homepage": "https://github.com/christinalu3799/christinalu3799.github.io#readme",
   "dependencies": {
-    "simple-icons": "^7.5.0"
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "simple-icons": "^7.6.0"
   }
 }
